--- a/Rendering/three-js/css/style.css
+++ b/Rendering/three-js/css/style.css
@@ -1,8 +1,12 @@
-body { margin: 0; }
+body { margin: 0; overflow-x: hidden; }
 canvas { width: 100%; height: 100% }
 
 #view {
     height: 100vh;
+}
+
+.container-spotter-content-div {
+    margin: 10px;
 }
 
 .toggle-controller {
