--- a/Rendering/three-js/css/style.css
+++ b/Rendering/three-js/css/style.css
@@ -18,3 +18,8 @@ canvas { width: 100%; height: 100% }
     text-align: center;
     border-radius: 0 7px 7px 0;
 }
+
+.container-spotter-input-label-block {
+    display: inline-block;
+    padding-right: 0;
+}
