--- a/Rendering/three-js/css/style.css
+++ b/Rendering/three-js/css/style.css
@@ -5,6 +5,10 @@ canvas { width: 100%; height: 100% }
     height: 100vh;
 }
 
+.display-inline-block {
+    display: inline-block;
+}
+
 .container-spotter-content-div {
     margin: 10px;
 }
@@ -22,4 +26,18 @@ canvas { width: 100%; height: 100% }
 .container-spotter-input-label-block {
     display: inline-block;
     padding-right: 0;
+}
+
+.container-spotter-basic-hr {
+    margin-top: 0px;
+}
+
+.container-spotter-add-item-button {
+    font-size: 1rem;
+    padding: 0;
+    display: inline-block;
+    height: 25px;
+    width: 25px;
+    margin-bottom: .5rem;
+    float: right;
 }
