--- a/Rendering/three-js/css/style.css
+++ b/Rendering/three-js/css/style.css
@@ -32,6 +32,10 @@ canvas { width: 100%; height: 100% }
     margin-top: 0px;
 }
 
+.container-spotter-item-divider-hr {
+    margin-bottom: 10px;
+}
+
 .container-spotter-add-item-button {
     font-size: 1rem;
     padding: 0;
