--- a/Rendering/three-js/css/style.css
+++ b/Rendering/three-js/css/style.css
@@ -45,3 +45,12 @@ canvas { width: 100%; height: 100% }
     margin-bottom: .5rem;
     float: right;
 }
+
+.container-spotter-left-div {
+    overflow-y: auto;
+    height: 750px;
+}
+
+.container-spotter-right-div {
+    padding: 0;
+}
