--- a/Rendering/three-js/css/style.css
+++ b/Rendering/three-js/css/style.css
@@ -46,11 +46,13 @@ canvas { width: 100%; height: 100% }
     float: right;
 }
 
-.container-spotter-left-div {
-    overflow-y: auto;
-    height: 750px;
-}
-
 .container-spotter-right-div {
     padding: 0;
+}
+
+@media(min-width: 768px) {
+    .container-spotter-left-div {
+        overflow-y: auto;
+        height: 750px;
+    }
 }
