--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,3 +31,62 @@
     transform: rotate(360deg);
   }
 }
+
+body { margin: 0; overflow-x: hidden; }
+canvas { width: 100%; height: 100% }
+
+#view {
+    height: 100vh;
+}
+
+.display-inline-block {
+    display: inline-block;
+}
+
+.container-spotter-content-div {
+    margin: 10px;
+}
+
+.toggle-controller {
+    position: absolute;
+    width: 50px;
+    height: 30px;
+    top: 5px;
+    background-color: rgba(50, 50, 50, 0.6);
+    text-align: center;
+    border-radius: 0 7px 7px 0;
+}
+
+.container-spotter-input-label-block {
+    display: inline-block;
+    padding-right: 0;
+}
+
+.container-spotter-basic-hr {
+    margin-top: 0px;
+}
+
+.container-spotter-item-divider-hr {
+    margin-bottom: 10px;
+}
+
+.container-spotter-add-item-button {
+    font-size: 1rem;
+    padding: 0;
+    display: inline-block;
+    height: 25px;
+    width: 25px;
+    margin-bottom: .5rem;
+    float: right;
+}
+
+.container-spotter-right-div {
+    padding: 0;
+}
+
+@media(min-width: 768px) {
+    .container-spotter-left-div {
+        overflow-y: auto;
+        height: 750px;
+    }
+}
