resolve issue where objects are not highlighted on mousehover

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,6 +82,7 @@ canvas { width: 100%; height: 100% }
 
 .container-spotter-right-div {
     padding: 0;
+    position: static;
 }
 
 @media(min-width: 768px) {
